完成主页功能开发

--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>登录页面</title>
   <!-- login的样式 -->
   <link rel="stylesheet" href="/assets/css/login.css">
   <!-- layui的样式 -->
@@ -79,6 +79,7 @@
   </div>
   <!-- 导入jquery -->
   <script src="/assets/lib/jquery.js"></script>
+  <script src="/assets/js/baseApi.js"></script>
   <!-- 导入自己的js脚本 -->
   <script src="/assets/js/login.js"></script>
   <script src="/assets/lib/layui/layui.all.js"></script>
